--- a/LocationAlbum/LocationAlbum/Info.plist
+++ b/LocationAlbum/LocationAlbum/Info.plist
@@ -3,7 +3,8 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app lets you keep track of interesting places. It needs access to theGPS coordinates for your location.</string>
+	<string>This app lets you keep track of interesting places. It needs access to the
+GPS coordinates for your location.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -29,6 +30,7 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+		<string>location-services</string>
 	</array>
 	<key>UIStatusBarTintParameters</key>
 	<dict>
